# DigitalShop

./: .cspell.json  .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  config.yaml.example  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/postgres/: example.env  postgresql.conf
docs/: README_ru.md
src/app/common/: exception.py
src/app/common/port/: __init__.py  session.py
src/app/coupon/: exception.py
src/app/coupon/cmd/: create.py
src/app/coupon/dto/: coupon.py  sorting.py
src/app/coupon/query/: list.py
src/app/order/: exception.py
src/app/order/cmd/: apply_coupon.py  cancel.py  change_items_amount.py  confirm.py  pay_with_payment.py  pay_with_wallet.py
src/app/order/port/: reader.py
src/app/order/query/: __init__.py
src/app/payment/port/: __init__.py  purpose.py
src/app/payment/query/: __init__.py  get.py  get_commission.py
src/app/product/category/: exception.py
src/app/product/position/: exception.py
src/app/referral/: exception.py
src/app/referral/cmd/: change_award_currency.py  set_referral_coefficient.py  switch_send_notifications.py
src/app/referral/dto/: report.py
src/app/referral/port/: reporter.py
src/app/referral/query/: get_award.py  get_coefficient.py
src/app/report/: exception.py
src/app/report/port/: reporter.py
src/app/report/query/: __init__.py  get_converted_general_by_period.py
src/app/user/: exception.py
src/app/user/cmd/: assign_role.py  register.py
src/app/user/dto/: report.py
src/app/user/port/: __init__.py  idp.py
src/app/user/service/: __init__.py
src/app/wallet/: exception.py
src/app/wallet/cmd/: top_up_manually.py
src/app/wallet/dto/: sorting.py
src/app/wallet/port/: __init__.py
src/app/wallet/query/: get_my.py  list_by_user_id.py
src/config/: configuration.py  db.py  log.py  redis.py
src/digital_shop/app/payment/: exception.py
src/digital_shop/config/: __init__.py  bot.py  configuration.py  file.py  payment.py
src/digital_shop/domain/common/: exception.py
src/digital_shop/domain/order/: entity.py
src/digital_shop/domain/payment/: entity.py
src/digital_shop/domain/user/: entity.py  exception.py
src/digital_shop/domain/wallet/: entity.py
src/digital_shop/infra/category/: repository.py
src/digital_shop/infra/common/: clock.py
src/digital_shop/infra/coupon/: redemption_repository.py  repository.py
src/digital_shop/infra/framework/: adaptix.py
src/digital_shop/infra/order/: __init__.py  repository.py  task.py
src/digital_shop/infra/payment/: registry.py  repository.py  rule_repository.py
src/digital_shop/infra/position/: repository.py
src/digital_shop/main/: payment.py
src/domain/user/: enums.py
src/infra/category/: repository.py
src/infra/coupon/: redemption_repository.py  repository.py
src/infra/framework/: adaptix.py
src/infra/order/: repository.py  task.py
src/infra/payment/: registry.py  repository.py  rule_repository.py
src/infra/position/: repository.py
src/infra/referral/: award_repository.py  policy_repository.py  profile_repository.py
src/infra/report/: reporter.py
src/infra/text/: __init__.py  text.py
src/infra/user/: reporter.py  repository.py
src/infra/wallet/: reader.py  repository.py
src/main/: payment.py
src/main/bot/: polling.py  webhook.py
src/main/ioc/: __init__.py  providers.py
src/main/ioc/app/: order.py  (+8 more)
src/main/taskiq/: broker.py  priority_broker.py  scheduler.py
src/presentation/aiogram/: dp.py  referral.py
tests/domain/user/: access_service.py  test_access_service.py
texts/en/: root.ftl
texts/en/admin/: root.ftl
texts/en/common/: commands.ftl  emoji.ftl  enums.ftl  error.ftl  exception.ftl  fallback.ftl  inline_ui.ftl
texts/en/service/: tech_work.ftl  unselected_lang.ftl
texts/ru/: root.ftl
texts/ru/admin/: root.ftl
texts/ru/common/: commands.ftl  enums.ftl  error.ftl  exception.ftl  fallback.ftl  inline_ui.ftl
texts/ru/service/: tech_work.ftl  unselected_lang.ftl
(+1104 files in other folders)
