[project]
name = "DigitalShop"
version = "0.1"
description = "Digital Shop"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "NordWind", email = "dev.ivanzakharov@gmail.com" },
]
dependencies = [
  "adaptix==3.0.0b12",
  "aiocryptopay==0.4.8",
  "aiofile==3.9.0",
  "aiogram==3.27.0",
  "aiogram-dialog==2.6.0",
  "alembic==1.18.4",
  "colorlog==6.10.1",
  "dishka==1.9.1",
  "fastapi==0.136.0",
  "fluent-compiler==1.1",
  "frozendict==2.4.7",
  "googletrans==4.0.2",
  "orjson==3.11.8",
  "psycopg[binary]==3.3.3",
  "pyaml==26.2.1",
  "redis==7.4.0",
  "sqlalchemy==2.0.49",
  "sulguk==0.11.1",
  "taskiq-redis==1.2.2",
  "uvicorn==0.44.0",
  "uvloop==0.22.1",
]

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.20.1",
  "pre-commit>=4.6.0",
  "pytest==9.0.2",
  "ruff==0.15.1",
  "sqlalchemy[mypy]==2.0.49",
  "tombi>=0.9.22",
  "types-pyyaml==6.0.12.20250915",
  "typos>=1.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_shop"]

[tool.mypy]
mypy_path = ["src/digital_shop"]
exclude = ["^.*migration.*$"]
explicit_package_bases = true
python_version = "3.14"
strict = true
pretty = true
warn_unreachable = true
plugins = [
  "sqlalchemy.ext.mypy.plugin",
  "pydantic.mypy",
]

[tool.pytest]
addopts = ["--color=yes", "-mnot(slow)", "-pno:cacheprovider"]
filterwarnings = []
markers = ["slow"]
pythonpath = ["src/digital_shop"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EXE",  # flake8-executable
  "F",  # Pyflakes
  "FAST",  # FastAPI
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PL",  # pylint
  "PLE",  # Pylint (error)
  "PLR5501",  # Pylint Refactor: collapsible-else-if
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise (RSE)
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self (SLF)
  "SLOT",  # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
]
ignore = [
  "PLR0913",  # too-many-arguments
  "PLR0917",  # too-many-positional-arguments
  "PLR6301",  # no-self-use
  "RUF001",  # ambiguous-unicode-character-string (cyrillic)
  "RUF002",  # ambiguous-unicode-character-docstring (cyrillic)
  "RUF003",  # ambiguous-unicode-character-comment (cyrillic)
  "S311",  # suspicious-non-cryptographic-random-usage
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
  "N818",
  "G004"
]

[tool.ruff.lint.per-file-ignores]
"src/digital_shop/presentation/aiogram/dialog**" = ["ARG002"]
"src/digital_shop/presentation/aiogram/filter**" = ["ARG002"]
"src/digital_shop/presentation/aiogram/router**" = ["ARG002"]
"src/digital_shop/infra/framework/sql_alchemy/migration/versions/**" = ["ALL"]
"src/digital_shop/infra/framework/sql_alchemy/table/custom_type/**" = ["ARG002"]
"tests/**" = [
  "ARG002",  # unused-method-argument
  "PLC2801",  # unnecessary-dunder-call
  "PLR2004",  # magic-value-comparison
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "S105",  # hardcoded-password-string
  "S106",  # hardcoded-password-func-arg
  "S107",  # hardcoded-password-default
  "SIM300",  # yoda-conditions
]
